--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "node": "~0.6.7"
   },
   "dependencies": {
-    "pegjs":"0.6.2"
+    "pegjs":"0.6.2",
+    "node-uuid":"1.3.3"
   },
   "devDependencies": {
     "nodeunit":"0.6.4"
