--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "author": "Andrew Lunny <alunny@gmail.com>",
   "name": "xcode",
   "description": "tools for working with xcode projects",
-  "version": "0.2.0",
+  "version": "0.2.1",
+  "main":"index.js",
   "repository": {
     "url": ""
   },
