--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "author": "Andrew Lunny <alunny@gmail.com>",
   "name": "xcode",
   "description": "parser for xcodeproj/project.pbxproj files",
-  "version": "0.3.4",
+  "version": "0.3.5",
   "main":"index.js",
   "repository": {
     "url": "https://github.com/alunny/node-xcode.git"
   },
   "engines": {
-    "node": "~0.6.7"
+    "node": ">=0.6.7"
   },
   "dependencies": {
     "pegjs":"0.6.2",
