--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "name": "xcode",
   "description": "parser for xcodeproj/project.pbxproj files",
   "version": "0.8.2",
-  "main":"index.js",
+  "main": "index.js",
   "repository": {
     "url": "https://github.com/alunny/node-xcode.git"
   },
@@ -11,8 +11,9 @@
     "node": ">=0.6.7"
   },
   "dependencies": {
+    "node-uuid":"1.3.3",
     "pegjs":"0.6.2",
-    "node-uuid":"1.3.3"
+    "simple-plist": "0.0.4"
   },
   "devDependencies": {
     "nodeunit":"0.9.0"
