--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "node": ">=0.6.7"
   },
   "dependencies": {
-    "node-uuid":"1.4.7",
     "pegjs": "0.9.0",
-    "simple-plist": "0.1.4"
+    "simple-plist": "0.1.4",
+    "uuid":"3.0.1"
   },
   "devDependencies": {
     "nodeunit": "0.9.1"
