--- a/package.json
+++ b/package.json
@@ -11,15 +11,16 @@
     "node": ">=0.6.7"
   },
   "dependencies": {
-    "node-uuid":"1.4.7",
+    "node-uuid": "1.4.7",
     "pegjs": "0.9.0",
-    "simple-plist": "0.1.4"
+    "simple-plist": "0.1.4",
+    "uuid": "^3.0.1"
   },
   "devDependencies": {
     "nodeunit": "0.9.1"
   },
   "scripts": {
     "test": "node_modules/.bin/nodeunit test/parser test"
-  }, 
+  },
   "license": "Apache-2.0"
 }
