--- a/package.json
+++ b/package.json
@@ -11,15 +11,15 @@
     "node": ">=0.6.7"
   },
   "dependencies": {
-    "pegjs": "0.9.0",
-    "simple-plist": "0.1.4",
-    "uuid":"3.0.1"
+    "pegjs": "^0.10.0",
+    "simple-plist": "^0.2.1",
+    "uuid": "3.0.1"
   },
   "devDependencies": {
-    "nodeunit": "0.9.1"
+    "nodeunit": "^0.11.0"
   },
   "scripts": {
     "test": "node_modules/.bin/nodeunit test/parser test"
-  }, 
+  },
   "license": "Apache-2.0"
 }
